--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-responsive": "^10.0.1",
     "react-router": "^7.5.1",
     "stream-chat": "^8.60.0",
     "stream-chat-react": "^12.14.0",
